2009-04-11  Dave Cross  <dave@dave.org.uk>

	* README: Added README.

	* commit 16c2dd7c54a44858f21427766768c67a0606a172

2009-04-11  Dave Cross  <dave@dave.org.uk>

	* Makefile.PL: Removed Makefile.PL (which is autogenerated)

	* commit b9a5e5f8dc63404934da74057ff7fe3ca67570c5

2009-04-10  Dave Cross  <dave@dave.org.uk>

	* Build.PL, MANIFEST, Makefile.PL, lib/WWW/Shorten/Qurl.pm,
	t/00load_a.t, t/00load_b.t, t/00noexp.t, t/98pod-coverage.t,
	t/99pod.t, t/qurl.t: Initial commit

	* commit 6ffa0605273c38afe0986ca9cf0c34d8e46d660a
