@@ -1,6 +1,6 @@
 ---
 name: WWW-Shorten-Qurl
-version: 2.00
+version: 2.01
 author:
   - 'Dave Cross <dave@mag-sol.com>'
 abstract: Perl interface to qurl.com
@@ -11,13 +11,14 @@ requires:
   LWP: 5.75
   LWP::UserAgent: 2.023
   URI: 1.27
+  WWW::Shorten: 0
   perl: 5.006
 build_requires:
   Test::More: 0.47
 provides:
   WWW::Shorten::Qurl:
     file: lib/WWW/Shorten/Qurl.pm
-    version: 2.00
+    version: 2.01
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
